fixed footer social media icon spacing

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,4 @@
-@use '../../styles';
+@use "../../styles";
 
 .footer-container {
   position: relative;
@@ -212,7 +212,7 @@
         align-items: flex-start;
         justify-content: space-between;
         width: 100%;
-        height: 100%;
+        height: 60%;
         padding: 0px 0px 20px 0px;
         @media screen and (max-width: styles.$screen-md-max) {
           flex-direction: column;
